fix floating label control's z-index issue

--- a/assets/sass/material/_text-field-floating-label.scss
+++ b/assets/sass/material/_text-field-floating-label.scss
@@ -21,6 +21,7 @@
   }
   > .form-control {
     margin-bottom: 0;
+    position: relative;
     &::placeholder {
       color: transparent;
       opacity: 0;
